objects/CaseOpportunities__c.object
<CustomObject>
    <description>SFDC1-593 -  Junction Object between Case and Opportunity</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>SFDC1-593 - Amount from opportunity</description>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>SFDC1-593- Master detail to Case</description>
        <inlineHelpText>Select the Case you wish to relate to an Opportunity.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Opportunities</relationshipLabel>
        <relationshipName>CaseOpportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <description>SFDC1-9099:Response Management - Display more details on the Related list</description>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Close Date</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedRevenue__c</fullName>
        <description>SFDC1-593 - Formula field for Expected Revenue</description>
        <formula>Opportunity__r.ExpectedRevenue</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Contains Parent case Id from L-Markit</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <description>SFDC1-9099:Response Management - Display more details on the Related list</description>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Name</inlineHelpText>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityStage__c</fullName>
        <description>SFDC1-9099:Response Management - Display more details on the Related list</description>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Stage</inlineHelpText>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-593 - Lookup to Opportunity</description>
        <inlineHelpText>Select the Opportunity you wish to relate to a Case.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Case Opportunities</relationshipLabel>
        <relationshipName>CaseOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PKIDCaseOpportunities__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>COp{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID CaseOpportunities</label>
        <type>AutoNumber</type>
    </fields>
    <label>Case Opportunities</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>Case Opportunities Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>